--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ capybara-*.html
 /.bundle
 /vendor/bundle
 /log/*
-/tmp/*
 /db/*.sqlite3
 /public/system/*
 /coverage/
@@ -17,3 +16,4 @@ rerun.txt
 pickle-email-*.html
 .project
 config/initializers/secret_token.rb
+config/database.yml
